# FIAP_MLE10_TC2

./: Dockerfile  Dockerfile.api  Dockerfile.streamlit  LICENSE  README.md  cloudbuild.streamlit.yaml  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
app/: __init__.py  streamlit_app.py
configs/: model.yaml  training.yaml
scripts/: deploy_streamlit_to_cloud_run.sh  upload_model_to_gcs.sh  validate_env.py
src/recommender/api/: inference.py  logging_config.py  main.py  metrics.py  model_registry.py  schemas.py
src/recommender/config/: model_config.py  settings.py
src/recommender/models/: factory.py
src/recommender/pipeline/: __init__.py  common.py  evaluate.py  feature_eng.py  preprocess.py  registry.py  train.py
src/recommender/preprocessing/: __init__.py  base.py  pipeline.py  strategies.py
src/recommender/training/: __init__.py
tests/: test_api.py  test_model_factory.py  test_model_registry.py  test_preprocessing_strategies.py  test_settings.py  test_streamlit_app.py
