[tool.poetry]
name = "recommender"
version = "0.1.0"
description = "Sistema de recomendação de produtos e-commerce — FIAP MLE10 Tech Challenge Fase 02"
authors = ["Tiago de Freitas Faustino <tiago.faustino@redeoba.com.br>"]
packages = [{ include = "recommender", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = {version = ">=2.3,<3.0", source = "pytorch-cpu"}
scikit-learn = ">=1.5,<2.0"
pandas = ">=2.2,<3.0"
numpy = ">=1.26,<2.0"
pydantic = ">=2.8,<3.0"
pydantic-settings = ">=2.4,<3.0"
pyyaml = ">=6.0,<7.0"

# mlflow é usado só pelos scripts de pipeline (treino/avaliação/registry),
# nunca pela API (confirmado por análise de imports) — fica num grupo à
# parte para não inflar a imagem da API com a árvore de dependências
# pesada do mlflow (Flask, SQLAlchemy, matplotlib, etc.). O Dockerfile de
# treino instala --only main,training; o Dockerfile.api instala só
# --only main,api, sem esse grupo.
[tool.poetry.group.training.dependencies]
mlflow = ">=2.15,<3.0"

# DVC é uma ferramenta de orquestração (CLI), não uma biblioteca
# importada pelo código em src/recommender — fica num grupo à parte
# para não inflar a imagem Docker (que instala só --only main, e
# portanto ignora este grupo automaticamente). `poetry install` local
# (sem --only) continua instalando tudo, incluindo este grupo.
[tool.poetry.group.cli.dependencies]
dvc = ">=3.55,<4.0"

# fastapi/uvicorn só são usados para servir a API de inferência
# (deploy opcional) — ficam num grupo à parte para não inflar a
# imagem de treino, que nunca precisa deles.
[tool.poetry.group.api.dependencies]
fastapi = ">=0.110,<1.0"
uvicorn = {version = ">=0.29,<1.0", extras = ["standard"]}
prometheus-client = ">=0.20,<1.0"
google-cloud-storage = ">=2.16,<3.0"

# O dashboard só consome a API via HTTP — não precisa de torch/mlflow/
# etc. Grupo à parte para manter a imagem do dashboard (Dockerfile.streamlit)
# enxuta, sem nada relacionado a treino/inferência local.
[tool.poetry.group.dashboard.dependencies]
streamlit = ">=1.35,<2.0"
requests = ">=2.31,<3.0"
pandas = ">=2.2,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.6"
pre-commit = "^3.8"
httpx2 = ">=2.0,<3.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ANN", "D"]
ignore = ["D203", "D213", "D105", "D107", "ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
